fix: Display line breaks in reviews

--- a/src/app/components/place/place-reviews/place-reviews.component.css
+++ b/src/app/components/place/place-reviews/place-reviews.component.css
@@ -20,4 +20,5 @@
 .words {
   color: var(--font-color);
   margin-top: var(--medium);
+  white-space: pre-wrap;
 }
